PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.4.3

- CURL:
  . Fixed bug #79078 (Hypothetical use-after-free in curl_multi_add_handle()).
    (cmb)

- MySQLnd:
  . Fixed bug #79084 (mysqlnd may fetch wrong column indexes with MYSQLI_BOTH).
    (cmb)

23 Jan 2020, PHP 7.4.2

- Core:
  . Preloading support on Windows has been disabled. (Nikita)
  . Fixed bug #79022 (class_exists returns True for classes that are not ready
    to be used). (Laruence)
  . Fixed bug #78929 (plus signs in cookie values are converted to spaces).
    (Alexey Kachalin)
  . Fixed bug #78973 (Destructor during CV freeing causes segfault if opline
    never saved). (Nikita)
  . Fixed bug #78776 (Abstract method implementation from trait does not check
    "static"). (Nikita)
  . Fixed bug #78999 (Cycle leak when using function result as temporary).
    (Dmitry)
  . Fixed bug #79008 (General performance regression with PHP 7.4 on Windows).
    (cmb)
  . Fixed bug #79002 (Serializing uninitialized typed properties with __sleep
    makes unserialize throw). (Nikita)

- CURL:
  . Fixed bug #79033 (Curl timeout error with specific url and post). (cmb)
  . Fixed bug #79063 (curl openssl does not respect PKG_CONFIG_PATH). (Nikita)

- Date:
  . Fixed bug #79015 (undefined-behavior in php_date.c). (cmb)

- DBA:
  . Fixed bug #78808 ([LMDB] MDB_MAP_FULL: Environment mapsize limit reached).
    (cmb)

- Exif:
  . Fixed bug #79046 (NaN to int cast undefined behavior in exif). (Nikita)

- Fileinfo:
  . Fixed bug #74170 (locale information change after mime_content_type).
    (Sergei Turchanov)

- GD:
  . Fixed bug #79067 (gdTransformAffineCopy() may use unitialized values). (cmb)
  . Fixed bug #79068 (gdTransformAffineCopy() changes interpolation method).
    (cmb)

- Libxml:
  . Fixed bug #79029 (Use After Free's in XMLReader / XMLWriter). (Laruence)

- OPcache: